# lucas-lehmer-server

./: Makefile  README.md  docker-compose.yml
c/: CMakeLists.txt  Dockerfile  app.py  lucas_lehmer.c  main.cpp
fortran/: Dockerfile  app.py  prime.f90  sieve.f90
go/: Dockerfile  README.md  kernel.cu  main.go
python/: Dockerfile  README.md  app.py
rust/: Cargo.toml  Dockerfile
rust/src/: main.rs
scala/: Dockerfile  README.md  build.sbt
scala/project/: plugins.sbt
scala/src/main/resources/: logback.xml
scala/src/main/scala/: LLTP.scala  LLTPServlet.scala  Main.scala
scala/src/main/webapp/WEB-INF/: web.xml
